Add planned transaction to overview