@@ -1,25 +1,39 @@
 package com.corgibalance.components.views;
 
+import com.corgibalance.components.HeroIcon;
 import com.corgibalance.controllers.RecentTransactionsTableController;
 import com.corgibalance.models.Account;
 import com.corgibalance.models.Budget;
 import com.corgibalance.models.Currency;
+import com.corgibalance.models.PlannedTransaction;
+import com.corgibalance.models.RecurringTransaction;
+import com.corgibalance.models.Tag;
+import com.corgibalance.models.Transaction;
 import com.corgibalance.models.TransactionType;
 import com.corgibalance.repositories.AccountRepository;
 import com.corgibalance.repositories.BudgetRepository;
+import com.corgibalance.repositories.PlannedTransactionRepository;
+import com.corgibalance.repositories.RecurringTransactionRepository;
 import com.corgibalance.repositories.SettingsRepository;
+import com.corgibalance.repositories.TagRepository;
 import com.corgibalance.repositories.TransactionRepository;
 import com.corgibalance.services.CurrencyConverter;
 import javafx.fxml.FXML;
+import javafx.geometry.Pos;
+import javafx.scene.control.Alert;
+import javafx.scene.control.Button;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.Hyperlink;
 import javafx.scene.control.Label;
 import javafx.scene.control.ListCell;
 import javafx.scene.control.ListView;
+import javafx.scene.control.Tooltip;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.Region;
 import javafx.scene.layout.VBox;
+import javafx.scene.paint.Color;
+import javafx.scene.shape.Circle;
 import javafx.util.Callback;
 import lombok.Setter;
 
@@ -27,6 +41,9 @@ import java.time.LocalDate;
 import java.time.Month;
 import java.time.format.DateTimeFormatter;
 import java.time.format.TextStyle;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -37,7 +54,7 @@ public class OverviewView extends View implements Refreshable {
 
     private static final String BASE_CURRENCY_KEY = "overview.baseCurrencyId";
     private static final DateTimeFormatter DATE_FORMAT = DateTimeFormatter.ofPattern("dd.MM.yyyy");
-
+    private static final int NEAREST_LIMIT = 5;
     @FXML
     private Label balanceValue;
     @FXML
@@ -48,6 +65,8 @@ public class OverviewView extends View implements Refreshable {
     private VBox accountList;
     @FXML
     private VBox budgetList;
+    @FXML
+    private VBox nearestList;
     @FXML
     private Hyperlink allAccountsLink;
     @FXML
@@ -60,7 +79,6 @@ public class OverviewView extends View implements Refreshable {
     private ComboBox<Integer> yearCombo;
     @FXML
     private RecentTransactionsTableController RecentTransactionsTableController;
-
     private CurrencyConverter converter;
     private AccountRepository accountRepository;
     private TransactionRepository transactionRepository;
@@ -71,6 +89,22 @@ public class OverviewView extends View implements Refreshable {
 
     public OverviewView() {
         super("Overview", "/fxml/views/Overview.fxml");
+    }
+
+    public static List<NearestPayment> nearestPayments(List<PlannedTransaction> planned, List<RecurringTransaction> recurring,
+                                                       LocalDate today, int limit) {
+        List<NearestPayment> overdue = new ArrayList<>();
+        List<NearestPayment> upcoming = new ArrayList<>();
+        for (PlannedTransaction p : planned) {
+            (p.getPlannedDate().isBefore(today) ? overdue : upcoming).add(NearestPayment.of(p));
+        }
+        for (RecurringTransaction r : recurring) {
+            (r.getNextDate().isBefore(today) ? overdue : upcoming).add(NearestPayment.of(r));
+        }
+        overdue.sort(Comparator.comparing(NearestPayment::date));
+        upcoming.sort(Comparator.comparing(NearestPayment::date));
+        overdue.addAll(upcoming.subList(0, Math.min(limit, upcoming.size())));
+        return overdue;
     }
 
     @FXML
@@ -161,7 +195,7 @@ public class OverviewView extends View implements Refreshable {
             yearCombo.getItems().setAll(years);
             yearCombo.setValue(selected != null && years.contains(selected) ? selected : defaultYear);
         } else {
-            yearCombo.setValue(years.isEmpty() ? LocalDate.now().getYear() : years.get(0));
+            yearCombo.setValue(years.isEmpty() ? LocalDate.now().getYear() : years.getFirst());
         }
         if (applyDefaults) {
             monthCombo.setValue(defaultMonth);
@@ -214,6 +248,147 @@ public class OverviewView extends View implements Refreshable {
             }
             budgetList.getChildren().add(budgetRow(budget, baseCurrencyId));
         }
+
+        refreshNearestPayments();
+    }
+
+    private void refreshNearestPayments() {
+        Map<Long, Long> accountCurrencies = new HashMap<>();
+        Map<Long, String> tagColors = new HashMap<>();
+        for (Account account : accountRepository.findAll()) {
+            accountCurrencies.put(account.getId(), account.getCurrencyId());
+        }
+        for (Tag tag : new TagRepository().findAll()) {
+            tagColors.put(tag.getId(), tag.getColor());
+        }
+        List<NearestPayment> payments = nearestPayments(
+                new PlannedTransactionRepository().findAll(),
+                new RecurringTransactionRepository().findActiveUpcoming(),
+                LocalDate.now(), NEAREST_LIMIT);
+
+        nearestList.getChildren().clear();
+        LocalDate today = LocalDate.now();
+        for (NearestPayment payment : payments) {
+            nearestList.getChildren().add(paymentRow(payment, today, accountCurrencies, tagColors));
+        }
+    }
+
+    private HBox paymentRow(NearestPayment payment, LocalDate today, Map<Long, Long> accountCurrencies,
+                            Map<Long, String> tagColors) {
+        boolean overdue = payment.date().isBefore(today);
+
+        Button confirm = new Button();
+        confirm.setGraphic(new HeroIcon(HeroIcon.Icon.CHECK));
+        confirm.getStyleClass().addAll("btn", "btn--transparent");
+        confirm.setTooltip(new Tooltip("Confirm"));
+        confirm.setOnAction(_ -> confirmPayment(payment));
+
+        Label description = new Label(paymentText(payment));
+        description.getStyleClass().add("nearest__desc");
+        description.setMaxWidth(Double.MAX_VALUE);
+
+        Label date = new Label(payment.date().format(DATE_FORMAT));
+        date.getStyleClass().add("nearest__date");
+
+        Label amount = new Label(converter.format(payment.amount(), accountCurrencies.get(payment.accountId())));
+        amount.getStyleClass().add("nearest__amount");
+        amount.getStyleClass().add(payment.type() == TransactionType.EXPENSE ? "nearest__amount--expense" : "nearest__amount--income");
+
+        Region spacer = new Region();
+        HBox.setHgrow(spacer, Priority.ALWAYS);
+
+        HBox row = new HBox(date, tagDot(payment.tagId(), tagColors), description, spacer, amount, confirm, deleteButton(payment));
+        row.setAlignment(Pos.CENTER_LEFT);
+        row.setSpacing(6);
+        row.getStyleClass().add("nearest__row");
+        if (overdue) {
+            row.getStyleClass().add("nearest__row--overdue");
+        }
+        return row;
+    }
+
+    private Button deleteButton(NearestPayment payment) {
+        Button delete = new Button();
+        delete.setGraphic(new HeroIcon(HeroIcon.Icon.X_MARK));
+        delete.getStyleClass().addAll("btn", "btn--danger-transparent");
+        delete.setTooltip(new Tooltip("Delete"));
+        delete.setOnAction(_ -> deletePayment(payment));
+        return delete;
+    }
+
+    private Circle tagDot(Long tagId, Map<Long, String> tagColors) {
+        String color = tagId == null ? null : tagColors.get(tagId);
+        if (color == null) {
+            return null;
+        }
+        try {
+            return new Circle(4, Color.web(color));
+        } catch (IllegalArgumentException e) {
+            return null;
+        }
+    }
+
+    private void confirmPayment(NearestPayment payment) {
+        try {
+            if (payment.planned != null) {
+                createTransaction(payment.planned.getAccountId(), payment.planned.getTagId(), payment.planned.getAmount(),
+                        payment.planned.getDescription(), payment.planned.getTransactionType(), payment.planned.getPlannedDate());
+                new PlannedTransactionRepository().delete(payment.planned);
+            } else {
+                RecurringTransaction recurring = payment.recurring;
+                createTransaction(recurring.getAccountId(), recurring.getTagId(), recurring.getAmount(),
+                        recurring.getDescription(), recurring.getTransactionType(), recurring.getNextDate());
+                LocalDate next = CalendarView.nextOccurrence(recurring.getNextDate(), recurring.getInterval());
+                if (recurring.getEndDate() != null && next.isAfter(recurring.getEndDate())) {
+                    recurring.setActive(false);
+                } else {
+                    recurring.setNextDate(next);
+                }
+                new RecurringTransactionRepository().update(recurring);
+            }
+            refresh();
+        } catch (RuntimeException e) {
+            showError(e);
+        }
+    }
+
+    private void deletePayment(NearestPayment payment) {
+        try {
+            if (payment.planned != null) {
+                new PlannedTransactionRepository().delete(payment.planned);
+            } else {
+                new RecurringTransactionRepository().delete(payment.recurring);
+            }
+            refresh();
+        } catch (RuntimeException e) {
+            showError(e);
+        }
+    }
+
+    private void createTransaction(Long accountId, Long tagId, long amount, String description,
+                                   TransactionType type, LocalDate date) {
+        Transaction transaction = new Transaction();
+        transaction.setAccountId(accountId);
+        transaction.setTagId(tagId);
+        transaction.setAmount(amount);
+        transaction.setDescription(description);
+        transaction.setTransactionType(type);
+        transaction.setTransactionDate(date);
+        new TransactionRepository().create(transaction);
+    }
+
+    private void showError(RuntimeException e) {
+        Alert alert = new Alert(Alert.AlertType.ERROR);
+        alert.setHeaderText(null);
+        alert.setContentText(e.getMessage());
+        alert.showAndWait();
+    }
+
+    private String paymentText(NearestPayment payment) {
+        if (payment.description() != null && !payment.description().isBlank()) {
+            return payment.description();
+        }
+        return payment.type() == TransactionType.EXPENSE ? "Planned expense" : "Planned income";
     }
 
     private VBox budgetRow(Budget budget, Long baseCurrencyId) {
@@ -290,5 +465,44 @@ public class OverviewView extends View implements Refreshable {
                 setText(currency == null ? "" : currency.getCode());
             }
         };
+    }
+
+    public record NearestPayment(PlannedTransaction planned, RecurringTransaction recurring) {
+
+        public static NearestPayment of(PlannedTransaction p) {
+            return new NearestPayment(p, null);
+        }
+
+        public static NearestPayment of(RecurringTransaction r) {
+            return new NearestPayment(null, r);
+        }
+
+        public LocalDate date() {
+            return planned != null ? planned.getPlannedDate() : recurring.getNextDate();
+        }
+
+        public long amount() {
+            return planned != null ? planned.getAmount() : recurring.getAmount();
+        }
+
+        public Long accountId() {
+            return planned != null ? planned.getAccountId() : recurring.getAccountId();
+        }
+
+        public Long tagId() {
+            return planned != null ? planned.getTagId() : recurring.getTagId();
+        }
+
+        public TransactionType type() {
+            return planned != null ? planned.getTransactionType() : recurring.getTransactionType();
+        }
+
+        public String description() {
+            return planned != null ? planned.getDescription() : recurring.getDescription();
+        }
+
+        public boolean isRecurring() {
+            return recurring != null;
+        }
     }
 }
